--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -8,8 +8,8 @@
   box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
   background-color: rgb(221, 221, 221);
-  overflow: scroll;
   position: relative;
 }
