--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -625,6 +625,14 @@ video {
   height: 100%;
 }
 
+.h-\[90\%\] {
+  height: 90%;
+}
+
+.h-\[95\%\] {
+  height: 95%;
+}
+
 .w-7 {
   width: 1.75rem;
 }
@@ -643,6 +651,10 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-\[90\%\] {
+  width: 90%;
 }
 
 .cursor-pointer {
