--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -581,6 +581,10 @@ video {
   margin-bottom: 1.25rem;
 }
 
+.mb-12 {
+  margin-bottom: 3rem;
+}
+
 .mt-\[30px\] {
   margin-top: 30px;
 }
@@ -621,24 +625,16 @@ video {
   height: 100px;
 }
 
-.h-\[50\%\] {
-  height: 50%;
+.h-\[95\%\] {
+  height: 95%;
 }
 
 .h-full {
   height: 100%;
 }
 
-.h-\[90\%\] {
-  height: 90%;
-}
-
-.h-\[95\%\] {
-  height: 95%;
-}
-
-.h-\[200px\] {
-  height: 200px;
+.h-5 {
+  height: 1.25rem;
 }
 
 .w-7 {
@@ -649,8 +645,8 @@ video {
   width: 100%;
 }
 
-.w-\[50\%\] {
-  width: 50%;
+.w-\[90\%\] {
+  width: 90%;
 }
 
 .w-\[full\] {
@@ -659,10 +655,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-\[90\%\] {
-  width: 90%;
 }
 
 .cursor-pointer {
@@ -745,13 +737,34 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-blue-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
-}
-
 .bg-opacity-70 {
   --tw-bg-opacity: 0.7;
+}
+
+.bg-gradient-to-r {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
+.bg-gradient-to-b {
+  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+}
+
+.bg-gradient-to-t {
+  background-image: linear-gradient(to top, var(--tw-gradient-stops));
+}
+
+.from-custom-blue {
+  --tw-gradient-from: rgb(2,0,36) var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(2 0 36 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.to-custom-red {
+  --tw-gradient-to: rgba(236,3,0,1) var(--tw-gradient-to-position);
+}
+
+.p-3 {
+  padding: 0.75rem;
 }
 
 .p-5 {
@@ -770,8 +783,8 @@ video {
   padding: 5%;
 }
 
-.p-3 {
-  padding: 0.75rem;
+.p-2 {
+  padding: 0.5rem;
 }
 
 .px-5 {
@@ -846,8 +859,8 @@ body {
 }
 
 @media (min-width: 768px) {
-  .md\:h-full {
-    height: 100%;
+  .md\:mb-12 {
+    margin-bottom: 3rem;
   }
 
   .md\:h-auto {
@@ -856,10 +869,5 @@ body {
 
   .md\:flex-row {
     flex-direction: row;
-  }
-
-  .md\:bg-black {
-    --tw-bg-opacity: 1;
-    background-color: rgb(0 0 0 / var(--tw-bg-opacity));
   }
 }
