--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -839,72 +839,6 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.shadow-lg {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[0_35px_60px_-15px_rgba\(0\2c 0\2c 0\2c 0\.3\)\] {
-  --tw-shadow: 0 35px 60px -15px rgba(0,0,0,0.3);
-  --tw-shadow-colored: 0 35px 60px -15px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[5px_5px_0px_0px_rgba\(109\2c 40\2c 217\)\] {
-  --tw-shadow: 5px 5px 0px 0px rgba(109,40,217);
-  --tw-shadow-colored: 5px 5px 0px 0px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[2px_5px_0px_0px_rgba\(109\2c 40\2c 217\)\] {
-  --tw-shadow: 2px 5px 0px 0px rgba(109,40,217);
-  --tw-shadow-colored: 2px 5px 0px 0px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[2px_2px_0px_0px_rgba\(109\2c 40\2c 217\)\] {
-  --tw-shadow: 2px 2px 0px 0px rgba(109,40,217);
-  --tw-shadow-colored: 2px 2px 0px 0px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[2px_3px_0px_0px_rgba\(109\2c 40\2c 217\)\] {
-  --tw-shadow: 2px 3px 0px 0px rgba(109,40,217);
-  --tw-shadow-colored: 2px 3px 0px 0px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[2px_3px_0px_0px_rgba\(131\2c 40\2c 217\)\] {
-  --tw-shadow: 2px 3px 0px 0px rgba(131,40,217);
-  --tw-shadow-colored: 2px 3px 0px 0px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[2px_3px_0px_0px_rgba\(131\2c 144\2c 217\)\] {
-  --tw-shadow: 2px 3px 0px 0px rgba(131,144,217);
-  --tw-shadow-colored: 2px 3px 0px 0px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[2px_3px_0px_0px_rgba\(131\2c 144\2c 136\)\] {
-  --tw-shadow: 2px 3px 0px 0px rgba(131,144,136);
-  --tw-shadow-colored: 2px 3px 0px 0px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[2px_3px_0px_0px_rgba\(131\2c 144\2c 136\2c 0\)\] {
-  --tw-shadow: 2px 3px 0px 0px rgba(131,144,136,0);
-  --tw-shadow-colored: 2px 3px 0px 0px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[2px_3px_0px_0px_rgba\(131\2c 144\2c 136\2c 0\.8\)\] {
-  --tw-shadow: 2px 3px 0px 0px rgba(131,144,136,0.8);
-  --tw-shadow-colored: 2px 3px 0px 0px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .shadow-\[3px_3px_0px_0px_rgba\(131\2c 144\2c 136\2c 0\.8\)\] {
   --tw-shadow: 3px 3px 0px 0px rgba(131,144,136,0.8);
   --tw-shadow-colored: 3px 3px 0px 0px var(--tw-shadow-color);
@@ -962,6 +896,10 @@ body {
   /* Cor do controle da barra e cor de fundo da barra */
 }
 
+.hover\:cursor-pointer:hover {
+  cursor: pointer;
+}
+
 .hover\:bg-gray-300:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
@@ -999,12 +937,6 @@ body {
 
 .hover\:underline:hover {
   text-decoration-line: underline;
-}
-
-.hover\:shadow:hover {
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .hover\:shadow-inner:hover {
