--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -674,6 +674,18 @@ video {
   height: 100vh;
 }
 
+.h-\[120vh\] {
+  height: 120vh;
+}
+
+.h-\[border-gray-2000vh\] {
+  height: border-gray-2000vh;
+}
+
+.h-\[\] {
+  height: ;
+}
+
 .w-7 {
   width: 1.75rem;
 }
@@ -869,6 +881,11 @@ video {
 .bg-yellow-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(250 204 21 / var(--tw-bg-opacity));
+}
+
+.bg-red-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-70 {
