"Updated AdminView.vue and added new CSS classes for height"

--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -666,6 +666,38 @@ video {
   height: 100vh;
 }
 
+.h-\[5010px\] {
+  height: 5010px;
+}
+
+.h-\[510px\] {
+  height: 510px;
+}
+
+.h-\[520px\] {
+  height: 520px;
+}
+
+.h-\[530px\] {
+  height: 530px;
+}
+
+.h-\[550px\] {
+  height: 550px;
+}
+
+.h-\[560px\] {
+  height: 560px;
+}
+
+.h-\[600px\] {
+  height: 600px;
+}
+
+.h-\[650px\] {
+  height: 650px;
+}
+
 .w-7 {
   width: 1.75rem;
 }
