"Added new CSS class `.h-60` and removed `.h-0` class. Removed `space-y-3` div wrapper in AdminView.vue."

--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -634,6 +634,10 @@ video {
   height: 1.5rem;
 }
 
+.h-60 {
+  height: 15rem;
+}
+
 .h-7 {
   height: 1.75rem;
 }
@@ -660,10 +664,6 @@ video {
 
 .h-screen {
   height: 100vh;
-}
-
-.h-0 {
-  height: 0px;
 }
 
 .w-7 {
